# inscricoes-conferencias

./: .gitignore  Dockerfile  README.md  pyproject.toml
conferencias/: app.py  db_test.py  history.py  pages.py
data/: inscricoes.db
inscricoes/: app.py  boxes.py  crud.py  layout.py  logger.py  main.py  model.py  settings.py
inscricoes/data/: logger.py  settings.py
inscricoes/data/db/: crud.py  model.py
inscricoes/db/: crud.py  model.py
inscricoes/routes/: pages.py
inscricoes/routes/api/: conferences_api.py
inscricoes/utilities/: handlers.py  utils.py
interface/: app.py
templates/home/: atualiza-conferencia.html  lista-conferencias.html  nova-conferencia.html  nova-inscricao.html  page-403.html  page-404.html  page-500.html
templates/includes/: footer.html  navigation.html  scripts.html  sidebar.html
templates/layouts/: base-fullscreen.html  base.html
tests/: test_crud.py
