[tool.poetry]
name = "inscricoes"
version = "0.1.0"
description = "Pacote para gestão de inscrições em conferências"
authors = ["Patrick Alves <cpatrickalves@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "3.10"
sqlmodel = "^0.0.8"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
