[tool.poetry]
name = "inscricoes"
version = "0.1.0"
description = "Pacote para gestão de inscrições em conferências"
authors = ["Patrick Alves <cpatrickalves@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
sqlmodel = "^0.0.8"
fastapi = "^0.103.2"
uvicorn = "^0.23.2"
jinja2 = "^3.1.2"
loguru = "^0.7.2"
python-decouple = "^3.8"


[tool.poetry.group.dev.dependencies]
pytest = "^7.4.2"
pytest-cov = "^4.1.0"
pytest-sugar = "^0.9.7"
pytest-clarity = "^1.0.1"
taskipy = "^1.12.0"
ipython = "^8.16.1"
ipykernel = "^6.25.2"
better-exceptions = "^0.3.3"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.taskipy.tasks]
test = "poetry run pytest --cov"
run = "uvicorn inscricoes.main:app --reload --port 8000"